Adding some admin features

--- a/public/css/teacher_request.css
+++ b/public/css/teacher_request.css
@@ -767,9 +767,17 @@ video {
   color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 
+.w-20{
+  width: 5rem;
+}
+
 .text-red-600{
   --tw-text-opacity: 1;
   color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
+.capitalize{
+  text-transform: capitalize;
 }
 
 .text-gray-500 {
