--- a/public/css/teacher_space.css
+++ b/public/css/teacher_space.css
@@ -385,6 +385,10 @@ textarea::placeholder {
 Set the default cursor for buttons.
 */
 
+.capitalize{
+  text-transform: capitalize;
+}
+
 button,
 [role="button"] {
   cursor: pointer;
