Fixing some bugs v2

--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -855,4 +855,7 @@ video {
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+  .md\:flex-row {
+    flex-direction: row;
+  }
 }
