--- a/public/css/course_watch.css
+++ b/public/css/course_watch.css
@@ -88,6 +88,10 @@ abbr:where([title]) {
           text-decoration: underline dotted;
 }
 
+.nav-bar {
+  z-index: 100;
+}
+
 /*
 Remove the default font size and weight for headings.
 */
