--- a/public/css/courses.css
+++ b/public/css/courses.css
@@ -760,6 +760,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.course-view:hover{
+  transform: scale(1.08);
+  transition-duration: 600ms;
+}
+.nav-bar-courses{
+  z-index: 100;
+}
+
 .bg-blue-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
