--- a/public/css/classe.css
+++ b/public/css/classe.css
@@ -861,6 +861,28 @@ video {
   }
 }
 
+.post-input{
+  transform: scale(1);
+  border-radius: 30px;
+  width: 100%;
+  transition: transform 500ms ease ;
+}
+
+.post-input:focus{
+  transform: scale(1.3);
+  transition-duration: 900ms;
+}
+
+.post-button {
+  border: 2px solid rgb(30 58 138);
+  border-radius: 20px;
+  width: 35%;
+}
+.post-button:hover{
+  background-color: white;
+  transition-property: all;
+  transition-duration: 600ms;
+}
 
 .text-white {
   --tw-text-opacity: 1;
