--- a/public/css/login.css
+++ b/public/css/login.css
@@ -644,6 +644,16 @@ video {
   border-radius: 9999px;
 }
 
+.username:focus {
+  transform: scale(1.1);
+  transition-duration: 500ms;
+}
+
+.password:focus{
+  transform: scale(1.1);
+  transition-duration: 500ms;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
