--- a/public/css/courses.css
+++ b/public/css/courses.css
@@ -854,8 +854,16 @@ video {
 }
 
 .text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+  font-size: 3rem;
+  line-height: 3rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);;
+}
+
+.no-course {
+  font-size: 2rem;
+  line-height: 2rem;
+  padding: 6rem;
+  color: rgb(177, 0, 0);
 }
 
 .font-bold {
