--- a/public/css/home.css
+++ b/public/css/home.css
@@ -837,8 +837,9 @@ video {
 }
 
 .text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+  font-size: 2.6rem;
+  line-height: 2.4rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);;
 }
 
 .text-4xl {
