Adding an pop up message

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -842,6 +842,24 @@ video {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);;
 }
 
+.pop-up {
+  display: none;
+  position: absolute;
+  top:  0;
+  left: 50%;
+  padding: 1rem;
+  font-size: 1.5rem;
+  line-height: 1.2rem;
+  transform: translateX(-50%);
+  background-color:  #DBEAFE ;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.3);
+  border: 2px solid  rgb(30 58 138);
+  border-radius: 20px;
+  z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
